Làm trang danh sách sản phẩm, fix lỗi vỡ giao diện

--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -47,6 +47,8 @@ html
         script(src="/bootstrap/js/bootstrap.min.js")
         // count down
         script(src="/js/jquery.countdown.js")
+        //imageLoaded
+        script(src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js") 
         // isotope
         script(src="/js/jquery.isotope-3.0.6.min.js")
         // waypoints
