--- a/views/client/pages/home/index.pug
+++ b/views/client/pages/home/index.pug
@@ -62,7 +62,9 @@ block main
                     h3 Dâu Tây
                     p.product-price
                         span Giá mỗi Kg
-                        |  85$
+                        del.old-price 100$
+                        span.new-price 85$
+                        span.discount -15%
                     a.cart-btn(href="/cart")
                         i.fas.fa-shopping-cart
                         |  Thêm Vào Giỏ Hàng
@@ -74,7 +76,9 @@ block main
                     h3 Quả Nho
                     p.product-price
                         span Giá mỗi Kg
-                        |  70$
+                        del.old-price 100$
+                        span.new-price 85$
+                        span.discount -15%
                     a.cart-btn(href="/cart")
                         i.fas.fa-shopping-cart
                         |  Thêm Vào Giỏ Hàng
@@ -86,7 +90,9 @@ block main
                     h3 Chanh
                     p.product-price
                         span Giá mỗi Kg
-                        |  35$
+                        del.old-price 100$
+                        span.new-price 85$
+                        span.discount -15%
                     a.cart-btn(href="/cart")
                         i.fas.fa-shopping-cart
                         |  Thêm Vào Giỏ Hàng
