--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -28,7 +28,7 @@
               li
                 a(href="/contact") Liên Hệ
               li
-                a(href="/shop") Cửa Hàng
+                a(href="/products") Cửa Hàng
                 ul.sub-menu
                   li
                     a(href="/products") Cửa Hàng
