--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/filterStatus.pug
+include ../../mixins/search.pug
 
 block main
     .col-lg-10
@@ -17,19 +18,7 @@ block main
                                 +filter-status(filterStatus)
 
                         //- Tìm kiếm (GET). Giữ lại status hiện tại (nếu có).
-                        form#searchForm.form-inline.ml-auto(method="GET" action=`/${prefixAdmin}/products` role="search" aria-label="Tìm kiếm sản phẩm")
-                            input.form-control.form-control-sm.mr-2(
-                                type="text"
-                                name="keyword"
-                                placeholder="Tìm kiếm..."
-                                value=(typeof keyword !== 'undefined' ? keyword : '')
-                                aria-label="Từ khóa tìm kiếm"
-                            )
-                            if typeof status !== 'undefined' && status
-                                input(type="hidden" name="status" value=status)
-                            button.btn.btn-secondary.btn-sm(type="submit")
-                                i.fas.fa-search.mr-1
-                                | Tìm
+                        +search(keyword)
                 .card
                     .card-header.d-flex.justify-content-between.align-items-center
                         h5.mb-0
@@ -92,3 +81,61 @@ block main
                                                 )
                                                     i.fas.fa-sync.mr-1
                                                     | Cập nhật
+                        //- Pagination
+                        - const cp = pagination.currentPage || 1
+                        - const tp = pagination.totalPages || 1
+                        - const win = 2
+                        - let start = Math.max(1, cp - win)
+                        - let end = Math.min(tp, cp + win)
+                        - if (start > 1 && (end - start) < win * 2) { start = Math.max(1, end - win * 2) }
+                        - if (end < tp && (end - start) < win * 2) { end = Math.min(tp, start + win * 2) }
+
+                        if tp > 1
+                        nav.pagination-wrapper(aria-label="Phân trang")
+                            ul.pagination.pagination-modern.justify-content-center(
+                                data-current-page=cp
+                                data-total-pages=tp
+                            )
+                                //- Prev
+                                li.page-item(class=cp === 1 ? 'disabled' : '')
+                                    button.page-link(
+                                        type="button"
+                                        aria-label="Trang trước"
+                                        button-pagination=(cp - 1)
+                                    )
+                                        i.fas.fa-angle-left
+
+                                //- First + ellipsis
+                                if start > 1
+                                    li.page-item
+                                        button.page-link(type="button" button-pagination=1 aria-label="Trang 1") 1
+                                    if start > 2
+                                        li.page-item.disabled
+                                            span.page-link &hellip;
+
+                                //- Window
+                                - for (let i = start; i <= end; i++)
+                                    li.page-item(class=i === cp ? 'active' : '')
+                                        button.page-link(
+                                            type="button"
+                                            button-pagination=i
+                                            aria-current=(i === cp ? 'page' : false)
+                                            aria-label=`Trang ${i}`
+                                        ) #{i}
+
+                                //- Ellipsis + last
+                                if end < tp
+                                    if end < tp - 1
+                                        li.page-item.disabled
+                                            span.page-link &hellip;
+                                    li.page-item
+                                        button.page-link(type="button" button-pagination=tp aria-label=`Trang ${tp}`) #{tp}
+
+                                //- Next
+                                li.page-item(class=cp === tp ? 'disabled' : '')
+                                    button.page-link(
+                                        type="button"
+                                        aria-label="Kế tiếp"
+                                        button-pagination=(cp + 1)
+                                    )
+                                        i.fas.fa-angle-right
