--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -2,6 +2,7 @@ extends ../../layouts/default.pug
 include ../../mixins/filterStatus.pug
 include ../../mixins/search.pug
 include ../../mixins/pagination.pug
+include ../../mixins/form-change-multi.pug
 
 block main
     .col-lg-10
@@ -34,8 +35,20 @@ block main
                     .card-body
                         .table-responsive
                             table#productsTable.table.table-hover(aria-describedby="Danh sách sản phẩm")
+                            +form-change-multi(
+                                `/${prefixAdmin}/products/change-multi?_method=PATCH`
+                            )
+                            table(
+                                class="table table-hover table-sm"
+                                checkbox-multi
+                            )
                                 thead.thead-dark
                                     tr
+                                        th 
+                                            input(
+                                                type="checkbox"
+                                                name="checkall"
+                                            ) 
                                         th STT
                                         th Hình ảnh
                                         th(data-sort="name" role="button" tabindex="0" aria-label="Sắp xếp theo tiêu đề")
@@ -49,6 +62,12 @@ block main
                                 tbody#productsTableBody
                                     each p, idx in products
                                         tr(data-id=p._id)
+                                            td
+                                                input(
+                                                    type="checkbox"
+                                                    name="ids"
+                                                    value=p._id
+                                                )
                                             td #{idx + 1}
                                             td
                                                 // Ảnh 60x60, object-fit: cover (dùng class, không inline style)
@@ -58,9 +77,17 @@ block main
                                             td= new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(p.price)
                                             td
                                                 if p.status === 'active'
-                                                    span.badge.badge-success.badge-pulse Hoạt động
+                                                    a.badge.badge-success.badge-pulse(
+                                                        data-status = p.status
+                                                        data-id = p._id 
+                                                        button-change-status
+                                                    ) Hoạt động
                                                 else
-                                                    span.badge.badge-danger.badge-pulse Dừng hoạt động
+                                                    a.badge.badge-danger.badge-pulse(
+                                                        data-status = p.status
+                                                        data-id = p._id 
+                                                        button-change-status
+                                                    ) Dừng hoạt động
                                             td
                                                 a.btn.btn-warning.btn-sm.btn-glow(
                                                 href=`/${prefixAdmin}/products/edit/${p._id}`
@@ -84,3 +111,12 @@ block main
                                                     | Cập nhật
                         //- Pagination
                         +pagination(pagination)
+
+                        form(
+                            action= ""
+                            method="POST"
+                            id = "form-change-status"
+                            data-path = `/${prefixAdmin}/products/change-status`
+                        ) 
+
+                        script(src="/admin/js/product.js")
