--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -97,8 +97,8 @@ block main
                                                     | Sửa
                                                 form.d-inline(method="POST", action=`/${prefixAdmin}/products/delete/${p._id}?_method=DELETE`)
                                                     button.btn.btn-danger.btn-sm.btn-glow(
-                                                        type="submit"
-                                                        onclick="return confirm('Bạn có chắc chắn muốn xóa?')"
+                                                        class="btn btn-danger btn-sm ml-1"
+                                                        button-delete
                                                         aria-label=`Xóa sản phẩm ${p.title}`
                                                     )
                                                         i.fas.fa-trash.mr-1
@@ -117,6 +117,13 @@ block main
                             method="POST"
                             id = "form-change-status"
                             data-path = `/${prefixAdmin}/products/change-status`
+                        ) 
+
+                        form(
+                            action= ""
+                            method="POST"
+                            id = "form-delete-item"
+                            data-path = `${prefixAdmin}/products/delete`
                         ) 
 
                         script(src="/admin/js/product.js")
